Fix nav z-index

--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ header {
     width: 100%;
     display: flex;
     justify-content: flex-end;
+    z-index: 1;
 }
 
 .navigation > a {
